# moatlab

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FEATURE_LOG.md  PROGRESS.md  README.md  WORKFLOW.md  pyproject.toml
docs/: 2026-03-15-stock-search-product-spec.md  DELIVERY_CHECKLIST.md  WEB_UI_DESIGN.md  analysis-progress-product-spec-2026-03-16.md  lark-bot-product-spec.md  lark-bot-tech-design.md  stock-search-product-spec-2026-03-15.md  stock-search-tech-design-2026-03-16.md  web-ui-product-spec.md  web-ui-tech-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  App.vue  index.css  main.tsx
frontend/src/api/: analysis.ts  client.ts  portfolio.ts  screener.ts
frontend/src/constants/: sectors.ts
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  PortfolioPage.tsx  ScreenerPage.tsx
frontend/src/router/: index.ts
frontend/src/stores/: analysis.ts  analysisStore.ts  portfolio.ts  portfolioStore.ts  screener.ts  screenerStore.ts  themeStore.ts
frontend/src/types/: analysis.ts  portfolio.ts  screener.ts
frontend/src/utils/: format.ts
frontend/src/views/: Analysis.vue  Home.vue  Portfolio.vue  Screener.vue  Settings.vue
prompts/: decision.md  financial.md  management.md  moat.md  portfolio.md  screener.md  valuation.md
scripts/: self-test.sh
src/moatlab/: __init__.py  cli.py  config.py  server.py
tests/test_api/: test_search.py
tests/test_channels/: test_commands.py  test_formatter.py  test_lark.py
tests/test_tools/: test_calculator.py  test_database.py  test_portfolio.py  test_stock_search.py
(+49 files in other folders)
