[project]
name = "moatlab"
version = "0.1.0"
description = "Personal value investing system inspired by Buffett & Duan Yongping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "yfinance>=0.2.40",
    "edgartools>=3.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
moatlab = "moatlab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moatlab"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
